--- a/start3/main/image.qrc
+++ b/start3/main/image.qrc
@@ -1,6 +1,10 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file>image/qt6.png</file>
+        <file>image/qt7.png</file>
+        <file>image/qt8.png</file>
+        <file>image/1.png</file>
+        <file>image/2.png</file>
     </qresource>
     <qresource prefix="/new/prefix2"/>
 </RCC>
