--- a/start3/main/welcome.ui
+++ b/start3/main/welcome.ui
@@ -33,9 +33,9 @@
    <widget class="QFrame" name="backgroundFrame">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>90</x>
       <y>90</y>
-      <width>1151</width>
+      <width>1041</width>
       <height>421</height>
      </rect>
     </property>
@@ -47,8 +47,8 @@
     </property>
     <property name="maximumSize">
      <size>
-      <width>1200</width>
-      <height>750</height>
+      <width>1400</width>
+      <height>900</height>
      </size>
     </property>
     <property name="styleSheet">
@@ -64,8 +64,8 @@
    <widget class="QPushButton" name="pushButton_Persian">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>10</y>
+      <x>120</x>
+      <y>30</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -81,8 +81,8 @@ color: rgb(255, 196, 54);</string>
    <widget class="QPushButton" name="pushButton_English">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>10</y>
+      <x>230</x>
+      <y>30</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -98,8 +98,8 @@ color: rgb(255, 196, 54);</string>
    <widget class="QPushButton" name="pushButton_P_Register">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>520</y>
+      <x>390</x>
+      <y>500</y>
       <width>230</width>
       <height>40</height>
      </rect>
@@ -113,11 +113,11 @@ background-color: rgb(12, 53, 106);</string>
      <string>همین حالا ثبت نام کنید</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_P_LonIn">
+   <widget class="QPushButton" name="pushButton_P_LogIn">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>520</y>
+      <x>100</x>
+      <y>500</y>
       <width>280</width>
       <height>40</height>
      </rect>
@@ -134,8 +134,8 @@ background-color: rgb(12, 53, 106);</string>
    <widget class="QPushButton" name="pushButton_E_Register">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>520</y>
+      <x>560</x>
+      <y>500</y>
       <width>151</width>
       <height>40</height>
      </rect>
@@ -152,8 +152,8 @@ background-color: rgb(12, 53, 106);</string>
    <widget class="QPushButton" name="pushButton_E_LonIn">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>520</y>
+      <x>720</x>
+      <y>500</y>
       <width>391</width>
       <height>40</height>
      </rect>
@@ -165,49 +165,6 @@ background-color: rgb(12, 53, 106);</string>
     </property>
     <property name="text">
      <string>You have already registered, enter</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_P_Goals">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>1020</x>
-      <y>40</y>
-      <width>161</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 900 11pt &quot;Segoe UI Black&quot;;
-color: rgb(255, 196, 54);
-background-color: rgb(12, 53, 106);</string>
-    </property>
-    <property name="text">
-     <string>اهداف مجموعه</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_E_Goals">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>50</y>
-      <width>301</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 900 11pt &quot;Segoe UI Black&quot;;
-color: rgb(255, 196, 54);
-background-color: rgb(12, 53, 106);
-</string>
-    </property>
-    <property name="text">
-     <string>Objectives of the collection</string>
     </property>
    </widget>
   </widget>
